--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 	"type": "module",
 	"dependencies": {
 		"@directus/sdk": "^10.1.4",
+		"cloudinary": "^1.32.0",
 		"photoswipe": "^5.3.2"
 	}
 }
