--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"prettier-plugin-svelte": "^2.7.0",
 		"sass": "^1.55.0",
 		"svelte": "^3.44.0",
+		"svelte-copy": "^1.3.0",
 		"svelte-preprocess": "^4.10.7",
 		"vite": "^3.1.0"
 	},
